Corrected comment syntax

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <div class="box green"></div>
     
-    // Heirarchy has no effect on layers for orange and blue since their is no stacking context.
-    // Or is it because they're in the same default stacking context?
+    <!-- Heirarchy has no effect on layers for orange and blue since their is no stacking context.
+    Or is it because they're in the same default stacking context? -->
     <div class="box pink">
         <div class="box orange"></div>
     </div>
